# ASIDC-SERVER

./: .gitattributes  .gitignore  CMakeLists.txt  CV_WEB.pro  databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  passwordhasher.cpp  passwordhasher.h  readme.md  readme.txt
.devcontainer/: devcontainer.json
apps/: main_cli.cpp
config/ssl_certs/: server.crt
core/: databasemanager.cpp  databasemanager.h  servercore.cpp  servercore.h
cv_web/: civetweb.c
data/: Создание БД GUARDER с таблицами.sql
data/ssl_certs/: server.key
db/: REST API 2.txt
db/init/: 001_init.sql  create_procedures.sql
docker/: .dockerignore  Dockerfile  build-run-compose.bat  docker-build.bat  docker-compose-build-run.bat  docker-compose-down.bat  docker-compose-run.bat  docker-compose.yml  docker-menu.bat  docker-run.bat
gui/: mainwindow.cpp  mainwindow.h
scripts/: build.bat  clean.bat  start.bat
src/: databasemanager.cpp  databasemanager.h  passwordhasher.cpp  passwordhasher.h  servercore.cpp  servercore.h
src/ssl_certs/: server.pem
